--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "devDependencies": {
     "typescript": "^4.0.2",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack --mode development"
   },
   "keywords": [],
   "author": "",
