--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "vue": "^2.6.12"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
+    "babel-loader": "^8.1.0",
     "typescript": "^4.0.2",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
