--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
     "babel-loader": "^8.1.0",
+    "css-loader": "^4.2.2",
     "html-webpack-plugin": "^4.3.0",
     "typescript": "^4.0.2",
     "vue-loader": "^15.9.3",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
