--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.2",
     "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.10.0",
     "typescript": "^4.0.2",
     "vue-loader": "^15.9.3",
     "vue-style-loader": "^4.1.2",
