--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test": "jest",
     "build": "webpack",
     "dev": "webpack-dev-server",
-    "deploy": "npm run build && echo https://decodecodon.com > dist/CNAME && surge dist/"
+    "deploy": "npm run build && echo decodecodon.com > dist/CNAME && surge dist/"
   },
   "keywords": [],
   "author": "",
