--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.2",
+    "css-minimizer-webpack-plugin": "^1.1.5",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.4.2",
     "mini-css-extract-plugin": "^0.10.0",
