--- a/package.json
+++ b/package.json
@@ -6,26 +6,27 @@
     "vue": "^2.6.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-typescript": "^7.10.4",
-    "@types/jest": "^26.0.14",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
+    "@types/jest": "^26.0.15",
     "@vue/test-utils": "^1.1.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^26.3.0",
+    "babel-jest": "^26.6.1",
     "babel-loader": "^8.1.0",
-    "css-loader": "^4.2.2",
+    "css-loader": "^5.0.0",
     "css-minimizer-webpack-plugin": "^1.1.5",
-    "html-webpack-plugin": "^4.3.0",
-    "jest": "^26.4.2",
-    "mini-css-extract-plugin": "^0.10.0",
-    "ts-loader": "^8.0.3",
-    "typescript": "^4.0.2",
+    "html-webpack-plugin": "^5.0.0-alpha.6",
+    "jest": "^26.6.1",
+    "mini-css-extract-plugin": "^0.12.0",
+    "terser-webpack-plugin": "^5.0.1",
+    "ts-loader": "^8.0.6",
+    "typescript": "^4.0.3",
     "vue-jest": "^3.0.7",
     "vue-loader": "^15.9.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.44.1",
+    "webpack": "^5.2.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.2.0"
