--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.6.1",
     "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^5.0.0",
     "css-minimizer-webpack-plugin": "^1.1.5",
     "html-webpack-plugin": "^5.0.0-alpha.6",
